--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <meta property="og:title" content="Sci-Fi films ranking" />
     <meta property="og:description" content="Ranking of Sci-Fi Films for Jason 'Orson Wells' english lessons">
     <meta property="og:type" content="website" />
-    <!-- FALTA URL DE NETLIFY EN "content" -->
-    <!-- <meta property="og:url" content="https://pr-ctica-01-01-arquitectura-de-la-informaci-n.vercel.app/" /> -->
+    <meta property="og:url" content="https://bespoke-boba-fab6af.netlify.app/" />
     <meta property="og:image" content="https://res.cloudinary.com/dd0zwrz0b/image/upload/v1719823168/Jason%20english%20lessons/jj-films-icon_wo3wmc.png" />
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Flex - Práctica 3">
