--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     />
     <meta name="author" content="Juanma 'Goblin' Martínez" />
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.terrypratchettbooks.com/">
     <meta name="keywords" content="english, practice, homework, sci-fi, discussion, cinema, ranking, film, goblin proyect">
     <link rel="stylesheet" href="./style.css">
     <html prefix="og: https://ogp.me/ns#">
@@ -25,9 +24,9 @@
     <meta property="og:url" content="https://bespoke-boba-fab6af.netlify.app/" />
     <meta property="og:image" content="https://res.cloudinary.com/dd0zwrz0b/image/upload/v1719823168/Jason%20english%20lessons/jj-films-icon_wo3wmc.png" />
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Flex - Práctica 3">
+    <meta name="twitter:title" content="Sci-Fi JJ films ranking">
     <meta name="twitter:description" content="Ranking of Sci-Fi Films for Jason 'Orson Wells' english lessons">
-    <meta name="twitter:site" content="@flexpractica3">
+    <meta name="twitter:site" content="@jjfilms">
     <meta name="twitter:creator" content="@juanmagoblinmartinez">
     <meta name="twitter:image" content="https://res.cloudinary.com/dd0zwrz0b/image/upload/v1719823168/Jason%20english%20lessons/jj-films-icon_wo3wmc.png">
 </head>
